--- a/S-express-mvc-handlebars-psql/public/styles.css
+++ b/S-express-mvc-handlebars-psql/public/styles.css
@@ -1,35 +1,1 @@
-* {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body {
-  background-color: teal;
-  color: #fff;
-}
-
-.navbar {
-  width: 100%;
-  border-bottom: 1px solid #fff;
-}
-.navbar__ul {
-  display: flex;
-  justify-content: flex-end;
-}
-.navbar__item {
-  list-style-type: none;
-  margin-right: 1.5rem;
-}
-.navbar__link {
-  color: #fff;
-  text-decoration: none;
-}
-.navbar__link--active {
-  text-decoration: underline;
-}
-
-.footer {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-}
+/* this app uses signature-css from generic-public folder */
