--- a/generic-public/signature-css.css
+++ b/generic-public/signature-css.css
@@ -1,10 +1,17 @@
+:root {
+  --charcoal: #2d3e54;
+  --dark-purple: #2b103a;
+  --saffron: #d8c429;
+  --rich-black: #010f19;
+  --amazonite: #0fc4b2;
+}
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
-  background-color: #2d3e54;
+  background-color: var(--charcoal);
   color: #fff;
   display: flex;
   flex-direction: column;
